# commentstrip

./: README.md  pyproject.toml
src/commentstrip/: __init__.py  cli.py  core.py
tests/: test_commentstrip.py
tests/fixtures/: adjacent_string_concat_before.py  annotated_assignment_string_before.py  bytestring_standalone_after.py  class_docstring_before.py  comment_after_colon_before.py  comment_only_module_before.py  comments_in_multiline_brackets_after.py  comments_in_multiline_brackets_before.py  concatenated_bytestrings_after.py  crlf_line_endings_before.py  disorganized_docstring_before.py  docstring_followed_by_code_before.py  empty_hash_comment_before.py  encoding_cookie_before.py  for_docstring_sole_before.py  fstring_standalone_before.py  full_line_comment_before.py  function_docstring_before.py  hash_inside_fstring_after.py  hash_inside_string_after.py  if_docstring_sole_before.py  leading_lines_carry_forward_footer_after.py  leading_lines_carry_forward_footer_before.py  leading_lines_carry_forward_midblock_before.py  module_docstring_before.py  module_header_comment_before.py  nested_docstrings_after.py  nested_docstrings_before.py  no_comments_after.py  non_utf8_encoding_cookie_after.py  non_utf8_encoding_cookie_before.py  oneliner_suite_docstring_before.py  oneliner_suite_docstring_semicolon_after.py  oneliner_suite_docstring_semicolon_before.py  orphan_block_comment_mid_function_before.py  quote_styles_after.py  quote_styles_before.py  semicolon_code_then_comment_before.py  semicolon_comment_then_code_before.py  shebang_before.py  (+12 more)
